fin partie 1 tp
