# src/dto/author.dto.ts
@@ -1,3 +1,5 @@
+import {BookDTO} from "./book.dto";
+
 export interface AuthorDTO {
   id?: number;
   firstName?: string;
