# src/dto/book.dto.ts
@@ -1,4 +1,5 @@
 import { AuthorDTO } from "./author.dto";
+import {BookCopyDTO} from "./bookCopy.dto";
 
 export interface BookDTO {
   id?: number;
